# Evidencia-algoritmos

./: CMakeLists.txt  README.md  coverage.info  funciones.cpp  funciones.h  main.cpp  sonar-project.properties  test-funciones.gcno  test-test.gcno  test.cpp
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  funciones.cpp  funciones.h
tests/: CMakeLists.txt  test.cpp
